# ChangeLog for sys-devel/ct-ng
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.50 2014/10/28 11:29:22 blueness Exp $

*ct-ng-1.19.0-r1 (28 Oct 2014)
*ct-ng-1.20.0-r1 (28 Oct 2014)

  28 Oct 2014; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.19.0-r1.ebuild,
  +ct-ng-1.20.0-r1.ebuild, -ct-ng-1.16.0.ebuild, -ct-ng-1.17.0.ebuild,
  -ct-ng-1.18.0.ebuild, -ct-ng-1.19.0.ebuild, -ct-ng-1.20.0.ebuild,
  -files/ct-ng-1.18.0-parallel-fix.patch:
  Remove older versions.  Fix bug #501678.

*ct-ng-1.20.0 (09 Sep 2014)

  09 Sep 2014; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.20.0.ebuild:
  Version bump

  28 Aug 2014; Michał Górny <mgorny@gentoo.org> ct-ng-1.19.0.ebuild:
  Remove unused USE=bash-completion. Install the completion file using the
  correct name.

  03 Oct 2013; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.12.4.ebuild,
  -ct-ng-1.13.4.ebuild, -ct-ng-1.14.1.ebuild, -ct-ng-1.15.3.ebuild:
  Remove old versions

*ct-ng-1.19.0 (03 Oct 2013)

  03 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.19.0.ebuild:
  Version bump

  25 Feb 2013; Markos Chandras <hwoarang@gentoo.org>
  +files/ct-ng-1.18.0-parallel-fix.patch, ct-ng-1.18.0.ebuild:
  Apply upstream patch to fix parallel installation. Bug #450398

  23 Feb 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add myself as secondary maintainer

*ct-ng-1.18.0 (01 Feb 2013)

  01 Feb 2013; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.18.0.ebuild:
  Version bump

  14 Nov 2012; Anthony G. Basile <blueness@gentoo.org> ct-ng-1.12.4.ebuild,
  ct-ng-1.13.4.ebuild, ct-ng-1.14.1.ebuild, ct-ng-1.15.3.ebuild,
  ct-ng-1.16.0.ebuild, ct-ng-1.17.0.ebuild:
  Fix HOMEPAGE, bug #443160

*ct-ng-1.17.0 (13 Nov 2012)

  13 Nov 2012; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.17.0.ebuild:
  Version bump

*ct-ng-1.16.0 (07 Aug 2012)

  07 Aug 2012; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.16.0.ebuild: