@@ -4,24 +4,26 @@ Hash: SHA256
 AUX ct-ng-kconfig-respect-flags.patch 565 SHA256 665a3e0e8a25803d1b0309f701f845ebf347a954dfd30a3a965414a8079a6094 SHA512 d69d498e577590176a991adb627c707774e090a9f13f295ce1cde499bc42e02cd1137aa93e342770c49116eccd016d6af212e70a903befd42d63131d34417359 WHIRLPOOL d35253d652ac9ae402afbd15f4b0bc3ac4891b579f40812ac13e993298bea06f1d6dc139efca02e5d0f3cf0aaf54cc5d96d80a1ad506be9d5914177a382127d9
 DIST crosstool-ng-1.19.0.tar.bz2 1901456 SHA256 cd54f20bb8190533b21c9cf7f93c9073c22d59541f52774c3f3053264ba53a93 SHA512 ad9a1763a3178acf028f36c189d4588372c325d4494ec90cb4fccc5a889a89595cc85586f0380bed8238cff4ce07e49ef5f47779048da2956d3bf380bd4d2f17 WHIRLPOOL d2d1f03f05809e6c3607edd9901cfafae56a3158f8273736929a9a282ed5830d07efa116d8e606471fe598ed9cfdc0157627c4cef5e77ccdb55853632faf3a95
 DIST crosstool-ng-1.20.0.tar.bz2 2035181 SHA256 bfb1d251a3b5dbd262f6eb8416532b9920bb7f122ae4fb861a1824fe30c73464 SHA512 42aa93fbdfb2daa9055d7aeba7539a59960caad9d674fb3ca8ed74353da75a49a799896777cf9511a54b4d47de0cb5d206fd7c5200f19067f9c8090a46b39653 WHIRLPOOL 8b8a025567d5af29142c0809aca62230951b080db889b8f3073a87925d12d971e42bd42b42ff2221ea9fd85d229b43d24e15d0d736c5c696708e9b76651c2cb7
+DIST crosstool-ng-1.21.0.tar.bz2 19883048 SHA256 c64493dd033dee0eb25903e66cf53ff5113ee33d193a8ff1df7ebebe47bdac46 SHA512 ab2e341a920f43ef4c621579777b7e709b773dd38aeb68f2b1b567652497b912666ab841ff501f406c34b266e8dbe7859d67f63471972a2200044824848cf061 WHIRLPOOL 4d869c25741700afe4e9e398a8e124acd8cb513eba5609b85980c921966b08ac16ec2a884ed2a885fd44acdbbda01ff05623bce609152bcec5fa14b2c632202c
 EBUILD ct-ng-1.19.0-r1.ebuild 1159 SHA256 b2c312eeea542e070408a6effd7d89819384bc95f83c9df95f28ad24348d6f10 SHA512 f40af24ce3365a4ac8264df4474cf63c4f2e8ef6804a153e442c674e86de868efa98a89b6175dd28a6da2eb843081dc8653b30d9f9d693d1cbfea9e0dbdc0d94 WHIRLPOOL 3367674a062a215d5ace21849d8fc82125a3adceee4d7fd44a282d24cc4673473f82d5b9be9c585ee7530aea9c7a5e17adb9a21f30e0f0e00444636ad31c4bb6
 EBUILD ct-ng-1.20.0-r1.ebuild 1159 SHA256 bf2eae16fd68793e558a6cd844efb45e601ab2e16ff4151ed1b84ba3c948e983 SHA512 839d7aa90c940befadf36fdaaee268a4e4b04a7ce30c7a588bb058f397d0e76a11e7440265f5bc9f022473909eb22c2e8faba88a809f0a63a9c27ce5792677b6 WHIRLPOOL 630ba0c5aab5e0dca536b35f28df8861bae7f8de3f2ff03d660c2615846eaede12bda537205d19aa5f56194914462b59ae647d6e92e946eceac9a1f40b17219f
-MISC ChangeLog 7500 SHA256 18dccbb2905a4af499aa8b1e252124007cfcd9760d76a6d63ceddbdb83fdcec3 SHA512 ce2459005a3e88af05957536c435a3bb6a7ec21214575219a71b61b5094fc68db8836dc71ceb5719d4a89c531df8c21dd34c71c8cf6e686eb3c6a7f9e466fdd0 WHIRLPOOL bb144cc2a531bf3bd03359ddef3d839a5c7bc0b98a276838bb7688c643a8b4f0d4b682f373eb793bc7d6f24cb5e621ffe685f04aacb39d1b4ebf23f511d109ac
+EBUILD ct-ng-1.21.0.ebuild 1156 SHA256 a672b0965d3ae875533d9e65df2ccf859e546f41a2e53828972af4a10fc33d0f SHA512 0050869d9561476dae7084c027e5127f3cb3e3284b33fdd78b5ff48ad626356e16999f62310aff606f862b8c54da4c5d6dc34b799e0e54f66d65e62a2169e6fc WHIRLPOOL 68d9c0215bf4e369c6265d2fdd6f13b56e182d8aadc00cef5e020407ba79be621be945ef704eb0cb6e2a6fffad9a9b1fdadaf1c0d01e0a97514db1ec376cf00f
+MISC ChangeLog 7623 SHA256 05072265aa4ec65fdd1651c5a468d8a2da3e389f8cb7e146af5d2334c657b822 SHA512 55b26f0feb0e050bb2c5491d4a5393efd260728dd91a8de0c389f5fa3d1040c30a48fc5b6792ed318bbda45c98cae0e92ff277e7cb5ecd9baadcc5904be370e2 WHIRLPOOL c0bd8bebf645740aa2eda35ba9f887d6fa67127a9d24d03116e32ceccd2ccda6d71cb2b27c4a3bf2266be1ef6a730e74bfdbb5fac5cc7cb201510795c88757d3
 MISC metadata.xml 666 SHA256 79484c9905232f1f43f92a5ab4fa8a107cfd6bdf51a1b418872116cbcfd91ecf SHA512 9e96209adf95bf2c97a7a390e94b3a185fd472f37f33b25845c12473c33e6624afaaec7ed1b0329c91864e88944eb8d8ff777612f50262e46663a5bb767e4a8b WHIRLPOOL a81cb7108e1aa641967a66fad521945fc15d8b32dcc3551a3517cb68fdda660de6711b39a6339eab1eae60e31366d6a5003e5faf7f564cc6a5a2ac33e63f3214
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUT352AAoJEJOE+m71LUu67PQQAJAGA6ZQ1FRmsnnNFwwAA2fP
-V8S75tbLnYsT6HrTHZQcFWIZOS/2VZnwaGkc+WGJ1D/zqsGG3kznI2Eg1v3MwuT9
-tl87fRRidv+97s5N/WfVy5fC2BvX3ltY9U6QzmxeNq5Ua82pQT+6dtBAG4tqj4DR
-FEKDrix1bMTlqiE76DKC9X8Qg53F+Qe8jk7N+WxluRzc7H0ju5A1JBOIniBaAqz6
-/BBvaAsNCc+LYuCMd/3tqtnsnpYSnkASEoGm18SyLYVrTooEh/XHobxR8mODrFGq
-YqlTVyEQku8r0D/yP/vKYcNbAbEM+p0H4V0oUfvI97AUJDuEeVTCzAggJ4TnQZ78
-Mtth07qdjRcIf9DS31zgtymJXanG3xGpY4twjLBT8o17YFcCGoIokCkUNxCk7vr9
-xYp9LiNIzgdb6B4LciGPVA3TYBA7N6OXpe10lmpwHuzYZa3Dt43uYscw1OGQija0
-zlUFkTGAATx/DbtR5+Z3RTmSxDW9YuzsRkap/7ahFKz5oyVupeurmKRn4HvkE2vO
-MXYbytCJ2csQZWv9QDBAJsc2nCEfoji0/xbhTkSZWc3LtpNuNDb/cBDN6ETzXIeF
-Z3XLlo9fnOyC4ilK0ZTcz8Pm41rqUQDXaVsTqnbWTgaK/ZOli6LSKHsZTStOvd7k
-YN+upFOkQlfUn1gLGftZ
-=Sg6i
+iQIcBAEBCAAGBQJVZPMAAAoJEJOE+m71LUu6+TUP/27/b32IOWAmTrx1MCxC3538
+EjrIQu+HQg39x3cv6x7HkJm8nlzMt0cLb9CpZtthqOTIvA6G5jmyzlrzNVIE06Wi
++C7D3j5MIbJy/VO11OyfsKqAEoFJ28h/F3LmQ6RCTufzHLDPT5nlQRlcImDMQqbm
+/qBGFKUygerXIsdoPK8OnMS26pZ29HL5IiHLXES3wj48+Z9YGXN+36YHAhT8ljkM
+foGLwqlEmFdeC8vHZpqxErlEGZCy3+sGwtKtuf+AW+5M3PlixoPT5xRc66nXH85a
+mkFoNceIRI/1dG79EvNEVW5e1oV/M2VR3PoNWgwt6x8JL3/8oEw4imsEDGwPHYdj
+YlXJQ+leg5h+y7depdjBGhgKLKHfDhlDUO8LL5jrfT1ZIuAKLD0vVKPoJ0661d7v
+dhxQBKuebyO3aJOWxlWELwydx481Yi8DTiS2K7IDznvN+e2xjd2Phea6+kST3v3O
+8f/8lTBduvLDCwrRVSHO9mJZ56M/gi9QzCqqyUEFVxTKgyOvMJvkwtEqrDHz8VYT
+3K1GxY8FJtFs8a8HraZTr4/hLP9VnP5pdNFYed/SQAGGhkXg+ntgi26MfBDk7ScW
+znNDC3hVXQGIRnGybTaeh4syi0C68MU2F8XQ+o55f0bq0u9yCBowSQXT6VyJQvGl
+gzHlITvrZgzIH72IS4UK
+=eH+u
 -----END PGP SIGNATURE-----
