@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/ct-ng
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.50 2014/10/28 11:29:22 blueness Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.51 2015/05/26 22:25:10 blueness Exp $
+
+*ct-ng-1.21.0 (26 May 2015)
+
+  26 May 2015; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.21.0.ebuild:
+  Version bump.
 
 *ct-ng-1.19.0-r1 (28 Oct 2014)
 *ct-ng-1.20.0-r1 (28 Oct 2014)
